WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259585
[WebXR] Fix MachSendRight build failures after
266327@main
https://bugs.webkit.org/show_bug.cgi?id=259585
Summary
[WebXR] Fix MachSendRight build failures after 266327@main
Dan Glastonbury
Reported
2023-07-27 18:58:37 PDT
Fix MachSendRight build failures after
266327@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-27 18:58:47 PDT
<
rdar://problem/113008655
>
Dan Glastonbury
Comment 2
2023-07-27 19:00:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16156
EWS
Comment 3
2023-07-27 19:10:00 PDT
Committed
266375@main
(2fe6aa932f3f): <
https://commits.webkit.org/266375@main
> Reviewed commits have been landed. Closing PR #16156 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug