[WebXR] Fix MachSendRight build failures after 266327@main https://bugs.webkit.org/show_bug.cgi?id=259585 rdar://113008655

Unreviewed build fix.

After 266327@main, MachSendRight() need to be moved instead of copied.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::WebXROpaqueFramebuffer::startFrame):
* Source/WebCore/platform/xr/PlatformXR.h:
(PlatformXR::Device::FrameData::LayerData::encode const):

Canonical link: https://commits.webkit.org/266375@main